--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,12 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "format": "prettier --single-quote --trailing-comma all --write --tab-width 2 src/**/*.{js,json,scss}",
     "start": "node index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon index"
   },
   "keywords": [
     "learn",
