--- a/btcsdl/package.json
+++ b/btcsdl/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.4.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
+    "react-file-base64": "^1.0.3",
     "react-icons": "^4.4.0",
     "react-paginate": "^8.1.3",
     "react-router": "^6.3.0",
